--- a/styles/scss/popup.scss
+++ b/styles/scss/popup.scss
@@ -1,3 +1,43 @@
+// @font-face {
+//     font-family: 'Mulish';
+//     font-weight: 300;
+//     font-style: normal;
+//     font-display: fallback;
+//     src: url("../../fonts/Mulish/Mulish-light.ttf") format("truetype");
+// }
+
+// @font-face {
+//     font-family: 'Mulish';
+//     font-weight: 400;
+//     font-style: normal;
+//     font-display: fallback;
+//     src: url("../../fonts/Mulish/Mulish-regular.ttf") format("truetype");
+// }
+
+// @font-face {
+//     font-family: 'Mulish';
+//     font-weight: 600;
+//     font-style: normal;
+//     font-display: fallback;
+//     src: url("../../fonts/Mulish/Mulish-semibold.ttf") format("truetype");
+// }
+
+// @font-face {
+//     font-family: 'Mulish';
+//     font-weight: 700;
+//     font-style: normal;
+//     font-display: fallback;
+//     src: url("../../fonts/Mulish/Mulish-bold.ttf") format("truetype");
+// }
+
+// @font-face {
+//     font-family: 'Mulish';
+//     font-weight: 800;
+//     font-style: normal;
+//     font-display: fallback;
+//     src: url("../../fonts/Mulish/Mulish-black.ttf") format("truetype");
+// }
+
 * {
     box-sizing: border-box;
 }
@@ -12,24 +52,32 @@ body {
     padding: 40px;
     background: rgba(255, 255, 255, 0.95);
     font-display: fallback;
-    font-family: 'Muli', Verdana, sans-serif;
-    color: rgba(255, 255, 255, 0.95);
+    font-family: 'Mulish', Verdana, sans-serif;
+    color: rgba(255, 255, 255, 1);
 }
 
 .messageBox {
     position: relative;
-    background: lightblue;
     box-shadow: 0 3px 8px 3px rgba(0, 0, 0, 0.1);
-    background-color: #30739c;
+    background-color: #006e7a;
     width: 100%;
     max-width: 680px;
-    padding: 35px 60px 70px 50px;
+    padding: 55px 60px 70px 50px;
 
     a {
-        color: #ffda95;
+        color: #ffcc99;
+        ;
         text-decoration: none;
-        font-weight: 700;
+        border-bottom: 1px dashed #d5a97e;
+        padding-bottom: 2px;
+        letter-spacing: 0.02em;
     }
+}
+
+.messageBox .specialLink span {
+    color: #ffc994;
+    font-weight: 800;
+    letter-spacing: 0.06em;
 }
 
 .closeModal {
@@ -44,13 +92,17 @@ body {
 }
 
 .mainTitle {
-    font-size: 30px;
-    line-height: 1.1em;
-    margin-bottom: 25px;
+    font-size: 25px;
+    line-height: 1.25em;
+    margin-bottom: 30px;
     font-weight: 300;
+    color: #ffffff;
+    border-bottom: 1px solid #ffffff63;
+    padding-bottom: 35px;
 
     span {
         font-weight: 700;
+        color: #ffc994;
     }
 }
 
@@ -107,7 +159,7 @@ body {
                     right: 2px;
                     border-radius: 1px;
                     transform: rotate(305deg);
-                    top: 6px;
+                    top: 7px;
                 }
 
                 &:after {
@@ -118,8 +170,58 @@ body {
                     background: white;
                     right: 11px;
                     transform: rotate(37deg);
-                    top: 10px;
+                    top: 11px;
                 }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 680px) {
+    body {
+        &.popup {
+            padding: 20px 10px;
+        }
+    }
+    
+    .popup {
+
+        &[body] {
+            padding: 20px 10px;
+        }
+
+        .messageBox {
+            padding: 55px 35px 70px 34px;
+        }
+
+        .mainTitle {
+            font-size: 22px;
+        }
+
+        .bannerText {
+            font-size: 16px;
+        }
+
+        .closeModal {
+            right: 4px;
+            top: 4px;
+            background-image: none;
+
+            &:before,
+            &:after {
+                content: '';
+                position: absolute;
+                width: 3px;
+                height: 30px;
+                background: white;
+                transform: translate(-50%,-50%) rotate(-45deg);
+                left: 50%;
+                top: 50%;
+                border-radius: 2px;
+            }
+
+            &:after {
+                transform: translate(-50%,-50%) rotate(45deg);
             }
         }
     }
