--- a/styles/css/banner.css
+++ b/styles/css/banner.css
@@ -1,29 +1,29 @@
 @font-face {
-  font-family: 'Muli';
+  font-family: "Muli";
   font-weight: 300;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-light.ttf") format("truetype"); }
 @font-face {
-  font-family: 'Muli';
+  font-family: "Muli";
   font-weight: 400;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-regular.ttf") format("truetype"); }
 @font-face {
-  font-family: 'Muli';
+  font-family: "Muli";
   font-weight: 600;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-semibold.ttf") format("truetype"); }
 @font-face {
-  font-family: 'Muli';
+  font-family: "Muli";
   font-weight: 700;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-bold.ttf") format("truetype"); }
 @font-face {
-  font-family: 'Muli';
+  font-family: "Muli";
   font-weight: 800;
   font-style: normal;
   font-display: fallback;
@@ -34,20 +34,19 @@ body {
   margin: 0;
   padding: 0;
   background: lightcoral;
-  font-family: 'Muli', Verdana, sans-serif; }
+  font-family: "Muli", Verdana, sans-serif; }
 
 button {
   border: none;
   -webkit-appearance: none;
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0);
-  font-family: 'Muli'; }
+  font-family: "Muli"; }
 
 .bannerInnerBox {
   box-sizing: border-box;
   position: relative;
   height: 100%;
-  font-size: 0;
   overflow: hidden;
   text-align: center; }
 
@@ -128,14 +127,6 @@ span.smallSpace {
   transform: translate(-50%, 50%);
   z-index: 10; }
 
-.logged-out .for-TitlesPage {
-  display: none !important; }
-
-.logged-in .for-LoginPage {
-  display: none !important; }
-  .logged-in .for-LoginPage .button-text {
-    margin-bottom: 6px;
-    padding: 5px 14px 6px; }
 .logged-in .announcementBanner span.button-text {
   border-bottom: 2px dotted rgba(255, 255, 255, 0.5);
   cursor: pointer; }
@@ -155,11 +146,12 @@ span.smallSpace {
   height: 131px;
   position: relative;
   overflow: visible;
-  font-size: 21px;
   overflow: hidden; }
   .announcementBanner a {
     font-weight: 600;
-    text-decoration: none; }
+    text-decoration: none;
+    color: white;
+    border-bottom: 1px solid #ffffff91; }
   .announcementBanner.noImage .bannerImage {
     display: block; }
     .announcementBanner.noImage .bannerImage img {
@@ -334,12 +326,12 @@ span.smallSpace {
     flex-direction: column;
     justify-content: center;
     position: relative;
-    width: calc(50% + 180px);
+    width: calc(50% + 255px);
     border-width: 0 0 1px 0;
     border-color: rgba(255, 255, 255, 0.4);
     border-style: solid; }
     .announcementBanner .bannerRight:before {
-      content: '';
+      content: "";
       position: absolute;
       border-width: 18px;
       border-style: solid;
@@ -380,40 +372,41 @@ span.smallSpace {
   right: 0;
   top: 0px;
   height: 100%;
-  background-image: url(../../images/iPhones-white-multi-1.jpg);
-  background-size: 610px;
+  background-image: url(../../images/maintenance8.jpg);
+  background-size: 600px;
   background-repeat: no-repeat;
-  background-position-x: 67%;
-  background-position-y: 29%;
-  padding-right: 0; }
+  background-position-x: 100%;
+  background-position-y: 50%; }
 .announcementBanner.leftRight .bannerRight {
-  background: #5d79d5; }
+  background: #a0156f; }
   .announcementBanner.leftRight .bannerRight:before {
-    border-right-color: #5d79d5; }
-  .announcementBanner.leftRight .bannerRight .titlesAndButtons {
-    padding: 30px 30px 40px; }
+    border-right-color: #a0156f; }
 .announcementBanner.leftRight .titlesAndButtons {
   height: 100%;
-  padding: 18px 30px 16px;
-  text-align: left; }
+  text-align: left;
+  padding: 18px 24px; }
 .announcementBanner.leftRight .titles {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; }
+  justify-content: space-between;
+  max-width: 850px;
+  font-size: 62.5%; }
 .announcementBanner.leftRight .mainTitle {
-  font-size: 26px;
   padding: 0;
-  line-height: 1.2em; }
-  .announcementBanner.leftRight .mainTitle + .surOrSubTitle {
-    top: -5px; }
+  font-size: 2em;
+  line-height: 1.1em;
+  letter-spacing: -0.01em; }
   .announcementBanner.leftRight .mainTitle span.standOut {
     font-size: 99%;
     font-weight: 700; }
 .announcementBanner.leftRight .surOrSubTitle {
-  font-size: 85%;
-  font-weight: 300;
-  position: relative; }
+  position: relative;
+  font-size: 1.4em;
+  line-height: 1.3em;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  max-width: 640px; }
   .announcementBanner.leftRight .surOrSubTitle.small .button-text {
     display: inline-block;
     border-radius: 16px;
@@ -432,26 +425,41 @@ span.smallSpace {
 .logged-in .announcementBanner.leftRight .bannerLeft {
   width: calc(50% - 255px); }
 
+@media screen and (max-width: 1220px) {
+  .announcementBanner.leftRight .titles {
+    max-width: 710px; }
+  .announcementBanner.leftRight .mainTitle {
+    font-size: 1.78em; } }
+@media screen and (max-width: 1024px) {
+  .announcementBanner.leftRight .bannerImage {
+    background-size: 490px;
+    background-position-y: 50%; } }
 @media screen and (max-width: 1023px) {
-  .announcementBanner .bannerImage {
+  .announcementBanner.leftRight .titles {
+    max-width: 800px; }
+  .announcementBanner.leftRight .mainTitle {
+    font-size: 2em; }
+  .announcementBanner.leftRight .bannerImage {
     display: none; }
-  .announcementBanner .bannerRight {
+  .announcementBanner.leftRight .bannerRight {
     width: 100vw; }
-    .announcementBanner .bannerRight .titlesAndButtons {
+    .announcementBanner.leftRight .bannerRight .titlesAndButtons {
       width: 100%;
       text-align: center;
       align-items: center; }
-  .announcementBanner .titles {
+  .announcementBanner.leftRight .titles {
     align-items: center; }
-  .announcementBanner .bannerLeft {
+  .announcementBanner.leftRight .bannerLeft {
     width: 0; }
-  .announcementBanner.atvWelcome .bannerRight .titlesAndButtons {
+  .announcementBanner.leftRight.atvWelcome .bannerRight .titlesAndButtons {
     padding: 10px 10px 5px 10px; }
-  .announcementBanner.atvWelcome .mainTitle {
+  .announcementBanner.leftRight.atvWelcome .mainTitle {
     font-size: 23px; } }
 @media screen and (max-width: 900px) {
-  .announcementBanner.surveyImprove .surOrSubTitle.small {
-    font-size: 75%; }
+  .announcementBanner.leftRight .titles {
+    max-width: 720px; }
+  .announcementBanner.leftRight .mainTitle {
+    font-size: 1.8em; }
 
   .playPause {
     right: unset;
@@ -467,15 +475,17 @@ span.smallSpace {
   .announcementBanner {
     height: 100%;
     width: 100vw; }
+    .announcementBanner .mobile-banner-spacer {
+      width: 100%; }
     .announcementBanner.leftRight .bannerLeft,
     .announcementBanner.leftRight .mobile-banner-spacer {
-      height: 40%; }
+      height: 120px; }
     .announcementBanner.leftRight .bannerLeft {
       width: 100%;
       position: absolute;
       z-index: 1;
-      top: 50%;
-      transform: translate(-50%, -60%);
+      top: 45%;
+      transform: translate(-50%, -60px);
       left: 50%; }
     .announcementBanner.leftRight .bannerImage {
       position: relative;
@@ -486,27 +496,22 @@ span.smallSpace {
       height: 100%; }
       .announcementBanner.leftRight .bannerRight .titlesAndButtons {
         padding: 0 24px; }
+    .announcementBanner.leftRight .titles {
+      display: block; }
     .announcementBanner.leftRight .mainTitle {
-      flex: 1 1 26%;
+      height: calc(45% - 60px);
       display: flex;
       flex-direction: column;
       justify-content: center; }
-    .announcementBanner.leftRight .mobile-banner-spacer {
-      flex: 1 1 40%;
-      width: 100%; }
     .announcementBanner.leftRight .surOrSubTitle {
       flex: 1 1 34%; }
     .announcementBanner .mainTitle {
       font-size: 95%; }
     .announcementBanner .surOrSubTitle {
-      flex: 1 1 34%;
+      height: calc(48% - 113px);
       display: flex;
       flex-direction: column;
-      top: 0;
-      line-height: 1.25em; }
-      .announcementBanner .surOrSubTitle > div {
-        position: relative;
-        top: 20%; }
+      justify-content: center; }
       .announcementBanner .surOrSubTitle.spaced > * {
         margin-bottom: 1.2em;
         line-height: 1.2em; }
