--- a/styles/scss/banner.scss
+++ b/styles/scss/banner.scss
@@ -514,7 +514,7 @@ span {
       left: 0;
       z-index: 1;
       margin-left: -36px;
-      margin-top: -62px;
+      margin-top: -58px;
     }
   }
 
@@ -565,25 +565,25 @@ span {
     right: 0;
     top: 0px;
     height: 100%;
-    background-image: url(../../images/maintenance8.jpg);
-    background-size: 600px;
+    background-image: url(../../images/maintenance3.jpg);
+    background-size: 708px;
     background-repeat: no-repeat;
     background-position-x: 100%;
     background-position-y: 50%;
   }
 
   .bannerRight {
-    background: #a0156f;
+    background: #009447;
 
     &:before {
-      border-right-color: #a0156f;
+      border-right-color: #009447;
     }
   }
 
   .titlesAndButtons {
     height: 100%;
     text-align: left;
-    padding: 18px 24px;
+    padding: 28px 28px 48px;
   }
 
   .titles {
@@ -597,7 +597,7 @@ span {
 
   .mainTitle {
     padding: 0;
-    font-size: 2em;
+    font-size: 2.3em;
     line-height: 1.1em;
     letter-spacing: -0.01em;
 
@@ -609,7 +609,7 @@ span {
 
   .surOrSubTitle {
     position: relative;
-    font-size: 1.4em;
+    font-size: 1.55em;
     line-height: 1.3em;
     font-weight: 400;
     letter-spacing: 0.03em;
@@ -661,17 +661,12 @@ span {
     .titles {
       max-width: 710px;
     }
-
-    .mainTitle {
-      font-size: 1.78em;
-    }
   }
 }
 
 @media screen and(max-width: 1024px) {
   .announcementBanner.leftRight .bannerImage {
-    background-size: 490px;
-    background-position-y: 50%;
+    background-size: 608px;
   }
 }
 
@@ -682,7 +677,7 @@ span {
     }
 
     .mainTitle {
-      font-size: 2em;
+      // font-size: 2em;
     }
 
     .bannerImage {
@@ -726,7 +721,7 @@ span {
     }
 
     .mainTitle {
-      font-size: 1.8em;
+      // font-size: 1.8em;
     }
   }
 
@@ -774,6 +769,7 @@ span {
         position: relative;
         display: block;
         padding-right: 0;
+        background-position-x: 50%;
       }
 
       // RIGHT
