--- a/styles/scss/banner.scss
+++ b/styles/scss/banner.scss
@@ -732,7 +732,7 @@ span {
     }
 }
 
-@media screen and (max-width: 767px) and (orientation: portrait) {
+@media screen and (max-width: 767px), (orientation: portrait) {
     .shyBreak {
         display: block;
     }
